--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Change Background Color</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="th.jpeg" alt="Logo">
+            <img src="images/th.jpeg" alt="Logo">
             <div class="navlink">
                 <ul>
                     <li>Tools</li>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="video">
-                <video src="video.mp4" autoplay loop muted></video>
+                <video src="images/video.mp4" autoplay loop muted></video>
             </div>
         </div>
         <div class="headfoot">
@@ -47,7 +47,7 @@
     <section>
         <div class="Third">
             <div class="video3">
-                <video src="vid2.mp4" autoplay loop muted></video>
+                <video src="images/vid2.mp4" autoplay loop muted></video>
             </div>
             <div class="text3">
                 <h1>Instantly change background color</h1>
@@ -68,14 +68,14 @@
                 </div>
             </div>
             <div class="video4">
-                <video src="vid3.mp4" autoplay loop muted></video>
+                <video src="images/vid3.mp4" autoplay loop muted></video>
             </div>
         </div>
     </section>
     <section>
         <div class="Third">
             <div class="video3">
-                <video src="vid4.mp4" autoplay loop muted></video>
+                <video src="images/vid4.mp4" autoplay loop muted></video>
             </div>
             <div class="text3">
                 <h1>Replace photo background with any image</h1>
@@ -98,14 +98,14 @@
                     Download your new photo to share, or keep editing Pixelcut's online photo editor.</p>
             </div>
             <div class="image">
-                <img src="img8.webp" alt="Example Image">
+                <img src="images/img8.webp" alt="Example Image">
             </div>
         </div>
     </section>
     <section class="footer">
         <h1>Download the app for free</h1>
         <p>Using AI-powered editing tools on your phone, you can <br>quickly and easily edit your photos to perfection.</p>
-        <img src="footer.webp" alt="Footer Image">
+        <img src="images/footer.webp" alt="Footer Image">
     </section>
 </body>
 </html>
